@@ -24,6 +24,9 @@
 # for facility names. Default is LOG_LOCAL6.
 #LogFacility LOG_MAIL
 
+# This option allows you to save the process identifier of the daemon
+#PidFile /var/run/freshclam.pid
+
 # By default when freshclam is started by root it drops privileges and
 # switches to the "clamav" user. You can change this behaviour here.
 #DatabaseOwner clamav
