@@ -1,3 +1,7 @@
+Sat Sep 18 02:09:52 CEST 2004 (tk)
+----------------------------------
+  * libclamav/scanners.c: honour return code of cli_mbox
+
 Sat Sep 18 01:13:21 CEST 2004 (tk)
 ----------------------------------
   * libclamav: add support for new signature format (*.ndb; not yet documented)
